Thu Dec 20 17:36:01 2007  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems*:  Import RubyGems 1.0.0, r1575.

Thu Dec 20 17:18:38 2007  Koichi Sasada  <ko1@atdot.net>

	* proc.c: support Proc#binding.

	* sample/test.rb: add a test.

Thu Dec 20 17:15:15 2007  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* pack.c: Slight change to documentation ('character' ->
	  'byte (C char)'). [ruby-core:13126], see also [ruby-core:13998].

Thu Dec 20 17:07:54 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (enc.mk): depends on rbconfig.rb.

	* regenc.h (OnigEncodingDefine): external encoding definition macro.

	* enc/Makefile.in: fix for linking.

	* enc/depend, enc/make_encmake.rb: fix for Windows.


	* enc/{ascii,euc_jp,sjis,utf8,iso_8859_{1..16}}.c: renamed.

Thu Dec 20 16:42:55 2007  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (find_line_no): return 0 if not found.

Thu Dec 20 16:04:17 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.ci, vm.c, vm_core.h: change interface of
	  vm_invoke_block() to specify block ptr.  [ruby-talk:266422]

	* cont.c, eval_jump.ci, insns.def, proc.c, signal.c, thread.c:
	  apply above change.

	* bootstraptest/test_knownbug.rb: move fixed bug.

	* bootstraptest/test_block.rb: ditto. and add a test.

Thu Dec 20 15:47:13 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/iso_8859_{1..16}.c: renamed.

Thu Dec 20 09:59:27 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.ci (vm_expandarray): fix sp increase place.
	  a patch from Yusuke ENDOH <mame AT tsg.ne.jp> in [ruby-dev:32581].

	* bootstraptest/test_massign.rb: add a test for above.

	* bootstraptest/test_syntax.rb: fix last committed test.

Thu Dec 20 09:47:58 2007  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_syntax.rb: add a test.

Thu Dec 20 09:40:51 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each/NODE_RETURN): fix stack consistency.

Thu Dec 20 09:42:11 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
