@@ -1,7 +1,7 @@
 /* -*-c-*- */
 /**********************************************************************
 
-  thread_pthread.ci -
+  thread_pthread.c -
 
   $Author$
   $Date$
