@@ -1,7 +1,7 @@
 /* -*-c-*- */
 /**********************************************************************
 
-  thread_win32.ci -
+  thread_win32.c -
 
   $Author$
   $Date$
