@@ -1,7 +1,7 @@
 /* -*-c-*- */
 /**********************************************************************
 
-  vm_evalbody.ci -
+  vm_evalbody.c -
 
   $Author$
   $Date$
