@@ -1,3 +1,9 @@
+Thu Dec 20 18:17:14 2007  Koichi Sasada  <ko1@atdot.net>
+
+	* common.mk, *.ci: renamed to *.c.
+
+	* eval_laod.c: renamed to load.c.
+
 Thu Dec 20 17:36:01 2007  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems*:  Import RubyGems 1.0.0, r1575.
